# nvptx-llvm-poc

./: README.md  compile.sh  install-dependencies.sh  run.sh  runner.cu
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs
kernel/src/linked_list_allocator/: hole.rs  mod.rs
kernel/src/lock_api/: mod.rs  mutex.rs  remutex.rs  rwlock.rs
kernel/src/scopeguard/: mod.rs
kernel/src/spinning_top/: mod.rs  relax.rs  rw_spinlock.rs  spinlock.rs
runner/: main.cu
