[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
panic = "abort"
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"

[features]
default = ["use_spin", "atomic_usize"]
use_spin = []
# deprecated - use `use_spin` instead
use_spin_nightly = ["use_spin"]
alloc_ref = []
# deprecated - no effect
const_mut_refs = []
nightly = []
arc_lock = []
atomic_usize = []

[dependencies]
curve25519-dalek = { git = "https://github.com/brandonros/curve25519-dalek", rev = "e7ba30033893602d98d250184b174574665ff545", default-features = false, features = ["alloc", "precomputed-tables"] }
